@@ -203,7 +203,7 @@ ags_menu_bar_init(AgsMenuBar *menu_bar)
   
   item = (GtkImageMenuItem *) gtk_image_menu_item_new_with_label("live!\0");
   gtk_menu_item_set_submenu((GtkMenuItem*) item, menu_bar->live);
-  gtk_menu_shell_append((GtkMenuShell*) menu_bar->edit, (GtkWidget*) item);
+  gtk_menu_shell_append((GtkMenuShell*) menu_bar->add, (GtkWidget*) item);
 
   item = (GtkImageMenuItem *) gtk_image_menu_item_new_with_label(g_strdup("DSSI\0"));
   gtk_menu_item_set_submenu((GtkMenuItem*) item, (GtkWidget*) ags_live_dssi_bridge_menu_new());
@@ -211,8 +211,8 @@ ags_menu_bar_init(AgsMenuBar *menu_bar)
 
   item = (GtkImageMenuItem *) gtk_image_menu_item_new_with_label(g_strdup("Lv2\0"));
   gtk_menu_item_set_submenu((GtkMenuItem*) item, (GtkWidget*) ags_live_lv2_bridge_menu_new());
-  gtk_menu_shell_append((GtkMenuShell*) menu_bar->live, (GtkWidget*) item);
-  
+  gtk_menu_shell_append((GtkMenuShell*) menu_bar->live, (GtkWidget*) item);  
+
   /* edit */
   item = (GtkImageMenuItem *) gtk_image_menu_item_new_with_label(g_strdup("Automation\0"));
   //  gtk_widget_set_sensitive(item,
@@ -341,7 +341,7 @@ ags_menu_bar_connect(AgsConnectable *connectable)
   /* lv2 */
   list3_start = 
     list3 = gtk_container_get_children((GtkContainer *) gtk_menu_item_get_submenu((GtkMenuItem *) list2->data));
-  //  list2 = list2->next;
+  list2 = list2->next;
   
   while(list3 != NULL){
     g_signal_connect(G_OBJECT(list3->data), "activate\0",
@@ -350,6 +350,12 @@ ags_menu_bar_connect(AgsConnectable *connectable)
     list3 = list3->next;
   }
 
+  g_list_free(list3_start);
+
+  /* live! */
+  list3 =
+    list3_start = gtk_container_get_children((GtkContainer *) gtk_menu_item_get_submenu((GtkMenuItem *) list2->data));
+  
   /* dssi */
   list4_start = 
     list4 = gtk_container_get_children((GtkContainer *) gtk_menu_item_get_submenu((GtkMenuItem *) list3->data));
@@ -375,7 +381,7 @@ ags_menu_bar_connect(AgsConnectable *connectable)
     
     list4 = list4->next;
   }
-  
+
   g_list_free(list4_start);
   g_list_free(list3_start);
   g_list_free(list2_start);
@@ -759,7 +765,7 @@ ags_live_lv2_bridge_menu_new()
     list = ags_base_plugin_sort(lv2_manager->lv2_plugin);
 
   while(list != NULL){
-    if((AGS_BASE_PLUGIN_IS_INSTRUMENT & (AGS_BASE_PLUGIN(list->data)->flags)) != 0){
+    if((AGS_LV2_PLUGIN_IS_SYNTHESIZER & (AGS_LV2_PLUGIN(list->data)->flags)) != 0){
       item = (GtkImageMenuItem *) gtk_menu_item_new_with_label(AGS_BASE_PLUGIN(list->data)->effect);
       g_object_set_data((GObject *) item,
 			AGS_MENU_ITEM_FILENAME_KEY, AGS_BASE_PLUGIN(list->data)->filename);
@@ -773,8 +779,6 @@ ags_live_lv2_bridge_menu_new()
     
     list = list->next;
   }
-
-  g_list_free(start);
   
   return(menu);
 }
